--- a/.github/workflows/integration-misc-3-enforcing-cron.yaml
+++ b/.github/workflows/integration-misc-3-enforcing-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-04-01T08:14:24Z by kres d903dae.
+# Generated on 2025-04-02T11:11:10Z by kres d903dae.
 
 name: integration-misc-3-enforcing-cron
 concurrency:
@@ -74,6 +74,12 @@ jobs:
           PUSH: "true"
         run: |
           make talosctl-linux-amd64 kernel sd-boot sd-stub initramfs installer-base imager talos _out/integration-test-linux-amd64
+      - name: uki-certs
+        if: github.event_name == 'schedule'
+        env:
+          PLATFORM: linux/amd64
+        run: |
+          make uki-certs
       - name: talosctl-cni-bundle
         if: github.event_name == 'schedule'
         run: |
@@ -94,6 +100,7 @@ jobs:
           IMAGE_REGISTRY: registry.dev.siderolabs.io
           SHORT_INTEGRATION_TEST: "yes"
           TAG_SUFFIX_IN: -enforcing
+          WITH_ENFORCING: "true"
           WITH_NETWORK_CHAOS: "yes"
         run: |
           sudo -E make e2e-qemu
@@ -105,6 +112,7 @@ jobs:
           SHORT_INTEGRATION_TEST: "yes"
           TAG_SUFFIX_IN: -enforcing
           WITH_CONFIG_INJECTION_METHOD: metal-iso
+          WITH_ENFORCING: "true"
         run: |
           sudo -E make e2e-qemu
       - name: e2e-iommu-pcidriverrebind
@@ -114,6 +122,7 @@ jobs:
           IMAGE_REGISTRY: registry.dev.siderolabs.io
           SHORT_INTEGRATION_TEST: "yes"
           TAG_SUFFIX_IN: -enforcing
+          WITH_ENFORCING: "true"
           WITH_IOMMU: "yes"
         run: |
           sudo -E make e2e-qemu
