fix: containerd auth hostname in the config
A special case, for `docker.io`, use `registry-1.docker.io`.

Fixes #10617

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/internal/pkg/containers/cri/containerd/testdata/cri.toml
+++ b/internal/pkg/containers/cri/containerd/testdata/cri.toml
@@ -4,6 +4,13 @@
       config_path = '/etc/cri/conf.d/hosts'
 
       [plugins.'io.containerd.cri.v1.images'.registry.configs]
+        [plugins.'io.containerd.cri.v1.images'.registry.configs.'registry-1.docker.io']
+          [plugins.'io.containerd.cri.v1.images'.registry.configs.'registry-1.docker.io'.auth]
+            username = 'root'
+            password = 'topsecret'
+            auth = ''
+            identitytoken = ''
+
         [plugins.'io.containerd.cri.v1.images'.registry.configs.'some.host:123']
           [plugins.'io.containerd.cri.v1.images'.registry.configs.'some.host:123'.auth]
             username = 'root'
