--- a/hack/test/patches/extensions.yaml
+++ b/hack/test/patches/extensions.yaml
@@ -18,6 +18,7 @@ machine:
       - name: cxgb4
       - name: cxgb4vf
       - name: drbd
+      - name: ena
       - name: gasket
       - name: net1080
       - name: option
@@ -28,6 +29,7 @@ machine:
       - name: usb_wwan
       - name: usbnet
       - name: usbserial
+      - name: xdma
       - name: zaurus
       - name: zfs
 ---
