--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-04-08T07:58:05Z by kres d903dae.
+# Generated on 2025-04-10T08:42:48Z by kres d903dae.
 
 name: default
 concurrency:
@@ -3291,7 +3291,7 @@ jobs:
           QEMU_EXTRA_DISKS: "3"
           QEMU_EXTRA_DISKS_DRIVERS: ide,nvme
           QEMU_EXTRA_DISKS_SIZE: "10240"
-          USER_DISKS_MOUNTS: /var/lib/extra,/var/lib/p1,/var/lib/p2
+          USER_DISKS_MOUNTS: /var/mnt/extra,/var/mnt/p1,/var/mnt/p2
           WITH_CONFIG_PATCH_WORKER: '@hack/test/patches/ephemeral-nvme.yaml:@hack/test/patches/dm-raid-module.yaml'
           WITH_USER_DISK: "true"
         run: |
@@ -3856,7 +3856,7 @@ jobs:
           QEMU_EXTRA_DISKS_DRIVERS: ide,nvme
           QEMU_EXTRA_DISKS_SIZE: "10240"
           TAG_SUFFIX_IN: -enforcing
-          USER_DISKS_MOUNTS: /var/lib/extra,/var/lib/p1,/var/lib/p2
+          USER_DISKS_MOUNTS: /var/mnt/extra,/var/mnt/p1,/var/mnt/p2
           WITH_CONFIG_PATCH_WORKER: '@hack/test/patches/ephemeral-nvme.yaml:@hack/test/patches/dm-raid-module.yaml'
           WITH_ENFORCING: "true"
           WITH_USER_DISK: "true"
