--- a/.kres.yaml
+++ b/.kres.yaml
@@ -1182,6 +1182,7 @@ spec:
             SHORT_INTEGRATION_TEST: yes
             WITH_UEFI: false
             IMAGE_REGISTRY: registry.dev.siderolabs.io
+            EXTRA_TEST_ARGS: "-talos.verifyukibooted=false"
         - name: e2e-bios-iso
           command: e2e-qemu
           withSudo: true
@@ -1192,6 +1193,7 @@ spec:
             VIA_MAINTENANCE_MODE: true
             WITH_ISO: true
             IMAGE_REGISTRY: registry.dev.siderolabs.io
+            EXTRA_TEST_ARGS: "-talos.verifyukibooted=false"
         - name: e2e-disk-image
           command: e2e-qemu
           withSudo: true
@@ -1214,6 +1216,7 @@ spec:
             WITH_DISK_ENCRYPTION: true
             WITH_UEFI: false
             IMAGE_REGISTRY: registry.dev.siderolabs.io
+            EXTRA_TEST_ARGS: "-talos.verifyukibooted=false"
         - name: e2e-node-address-v2
           command: e2e-qemu
           withSudo: true
