feat: add support for instance tags on AWS
We can add on other platforms as well as we go.

See https://github.com/siderolabs/omni/issues/1059

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/internal/app/machined/pkg/runtime/v1alpha1/platform/aws/testdata/expected.yaml
+++ b/internal/app/machined/pkg/runtime/v1alpha1/platform/aws/testdata/expected.yaml
@@ -21,3 +21,5 @@ metadata:
     zone: us-east-1a
     instanceId: i-0a0a0a0a0a0a0a0a0
     providerId: aws:///us-east-1a/i-0a0a0a0a0a0a0a0a0
+    tags:
+        cluster: mycluster
