--- a/.kres.yaml
+++ b/.kres.yaml
@@ -2720,8 +2720,8 @@ spec:
         - name: e2e-gcp-prepare
         - name: checkout contrib
           checkoutStep:
-            repository: frezbo/contrib
-            ref: feat/enable-gcp-uefi
+            repository: siderolabs/contrib
+            ref: main
             path: _out/contrib
         - name: setup tf
           terraformStep: true
