fix: uki boot detection
Fix UKI boot detection

Also fix bug introduced by #10640 which imported the unix package making
talosctl non-unix builds broken.

Signed-off-by: Noel Georgi <git@frezbo.dev>

--- a/.kres.yaml
+++ b/.kres.yaml
@@ -2720,8 +2720,8 @@ spec:
         - name: e2e-gcp-prepare
         - name: checkout contrib
           checkoutStep:
-            repository: siderolabs/contrib
-            ref: main
+            repository: frezbo/contrib
+            ref: feat/enable-gcp-uefi
             path: _out/contrib
         - name: setup tf
           terraformStep: true
