--- a/.github/workflows/integration-gcp-cron.yaml
+++ b/.github/workflows/integration-gcp-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-04-01T08:14:24Z by kres d903dae.
+# Generated on 2025-04-08T03:31:36Z by kres d903dae.
 
 name: integration-gcp-cron
 concurrency:
@@ -104,8 +104,8 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/contrib
-          ref: main
-          repository: siderolabs/contrib
+          ref: feat/enable-gcp-uefi
+          repository: frezbo/contrib
       - name: setup tf
         uses: hashicorp/setup-terraform@v3
         with:
