feat: add support for GCP instance tags
Same change as AWS.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/internal/app/machined/pkg/runtime/v1alpha1/platform/gcp/testdata/expected.yaml
+++ b/internal/app/machined/pkg/runtime/v1alpha1/platform/gcp/testdata/expected.yaml
@@ -55,3 +55,6 @@ metadata:
     instanceType: n1-standard-1
     instanceId: "0"
     providerId: gce://123/us-central1-a/my-server
+    tags:
+        tag1: ""
+        tag2: ""
