feat: update Kubernetes to v1.33.0-rc.0
Go modules haven't been tagged, see
https://github.com/kubernetes/kubernetes/issues/131244.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -24,7 +24,7 @@ preface = """
 * containerd: 2.0.4
 * etcd: 3.5.20
 * Flannel: 0.26.6
-* Kubernetes: 1.33.0-beta.0
+* Kubernetes: 1.33.0-rc.0
 
 Talos is built with Go 1.24.2.
 """
