--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-04-10T08:42:48Z by kres d903dae.
+# Generated on 2025-04-15T15:57:38Z by kres fd5cab0.
 
 name: default
 concurrency:
@@ -634,7 +634,6 @@ jobs:
       - name: e2e-aws-nvidia-nonfree
         env:
           EXTRA_TEST_ARGS: -talos.extensions.nvidia
-          TEST_NUM_NODES: "4"
         run: |
           make e2e-aws
       - name: tf destroy
@@ -788,8 +787,7 @@ jobs:
           make e2e-cloud-tf
       - name: e2e-aws-nvidia-oss
         env:
-          EXTRA_TEST_ARGS: -talos.extensions.nvidia
-          TEST_NUM_NODES: "4"
+          EXTRA_TEST_ARGS: -talos.extensions.nvidia -talos.verifyukibooted=false
         run: |
           make e2e-aws
       - name: tf destroy
