--- a/.github/workflows/integration-aws-nvidia-oss-cron.yaml
+++ b/.github/workflows/integration-aws-nvidia-oss-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-04-04T11:30:51Z by kres d903dae.
+# Generated on 2025-04-15T15:57:38Z by kres fd5cab0.
 
 name: integration-aws-nvidia-oss-cron
 concurrency:
@@ -143,8 +143,7 @@ jobs:
           make e2e-cloud-tf
       - name: e2e-aws-nvidia-oss
         env:
-          EXTRA_TEST_ARGS: -talos.extensions.nvidia
-          TEST_NUM_NODES: "4"
+          EXTRA_TEST_ARGS: -talos.extensions.nvidia -talos.verifyukibooted=false
         run: |
           make e2e-aws
       - name: tf destroy
