chore: bump dependencies
No major bumps, except for CoreDNS 1.12.1, mostly updating Go modules.

Update pkgs/tools to final v1.10.0 versions.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -25,6 +25,7 @@ preface = """
 * etcd: 3.5.20
 * Flannel: 0.26.6
 * Kubernetes: 1.33.0-rc.0
+* CoreDNS: 1.12.1
 
 Talos is built with Go 1.24.2.
 """
