--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-04-10T08:42:48Z by kres d903dae.
+# Generated on 2025-04-15T13:01:06Z by kres fd5cab0.
 
 name: default
 concurrency:
@@ -595,7 +595,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/extensions
-          ref: main
+          ref: release-1.10
           repository: siderolabs/extensions
       - name: set variables
         run: |
@@ -750,7 +750,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/extensions
-          ref: main
+          ref: release-1.10
           repository: siderolabs/extensions
       - name: set variables
         run: |
@@ -1304,7 +1304,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/extensions
-          ref: main
+          ref: release-1.10
           repository: siderolabs/extensions
       - name: unshallow-extensions
         run: |
@@ -3390,7 +3390,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/extensions
-          ref: main
+          ref: release-1.10
           repository: siderolabs/extensions
       - name: set variables
         run: |
