--- a/.kres.yaml
+++ b/.kres.yaml
@@ -1636,7 +1636,7 @@ spec:
         - name: checkout extensions
           checkoutStep:
             repository: siderolabs/extensions
-            ref: main
+            ref: release-1.10
             path: _out/extensions
         - name: unshallow-extensions
           nonMakeStep: true
@@ -1987,7 +1987,7 @@ spec:
         - name: checkout extensions
           checkoutStep:
             repository: siderolabs/extensions
-            ref: main
+            ref: release-1.10
             path: _out/extensions
         - name: set variables
           nonMakeStep: true
@@ -2527,7 +2527,7 @@ spec:
         - name: checkout extensions
           checkoutStep:
             repository: siderolabs/extensions
-            ref: main
+            ref: release-1.10
             path: _out/extensions
         - name: set variables
           nonMakeStep: true
@@ -2625,7 +2625,7 @@ spec:
         - name: checkout extensions
           checkoutStep:
             repository: siderolabs/extensions
-            ref: main
+            ref: release-1.10
             path: _out/extensions
         - name: set variables
           nonMakeStep: true
