--- a/website/hugo.toml
+++ b/website/hugo.toml
@@ -64,6 +64,8 @@ unsafe = true
 [markup.highlight]
 # See a complete list of available styles at https://xyproto.github.io/splash/all.html
 style = "solarized-dark"
+
+noClasses = false
 # Uncomment if you want your chosen highlight style used for code blocks without a specified language
 # guessSyntax = "true"
 
@@ -199,6 +201,8 @@ sidebar_menu_compact = true
 sidebar_menu_foldable = true
 # Set to true to hide the sidebar search box (the top nav search box will still be displayed if search is enabled)
 sidebar_search_disable = true
+
+showLightDarkModeMenu = true
 
 # Adds a H2 section titled "Feedback" to the bottom of each doc. The responses are sent to Google Analytics as events.
 # This feature depends on [services.googleAnalytics] and will be disabled if "services.googleAnalytics.id" is not set.
