chore: allow more than a single commit
Prepare the branch for backports.

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/.kres.yaml
+++ b/.kres.yaml
@@ -85,6 +85,7 @@ spec:
     - integration-aws-nvidia-oss
     - integration-aws-nvidia-nonfree
     - integration-gcp
+  conformMaximumOfOneCommit: false
 ---
 kind: common.GHWorkflow
 spec:
