--- a/website/hugo.toml
+++ b/website/hugo.toml
@@ -114,7 +114,7 @@ version_menu = "Releases"
 
 # A link to latest version of the docs. Used in the "version-banner" partial to
 # point people to the main doc site.
-url_latest_version = "/v1.9"
+url_latest_version = "/v1.10"
 
 # Repository configuration (URLs for in-page links to opening issues and suggesting changes)
 github_repo = "https://github.com/siderolabs/talos"
@@ -143,11 +143,11 @@ prism_syntax_highlighting = false
 
 [[params.versions]]
 url = "/v1.10/"
-version = "v1.10 (pre-release)"
+version = "v1.10 (latest)"
 
 [[params.versions]]
 url = "/v1.9/"
-version = "v1.9 (latest)"
+version = "v1.9"
 
 [[params.versions]]
 url = "/v1.8/"
