fix(ci): provision tests
Fix the provision-0 cron tests.
Support zstd disk images for `talosctl cluster create`.

Signed-off-by: Noel Georgi <git@frezbo.dev>
(cherry picked from commit 01bb294af63f193dafa12cb623ea77ad67b698fb)

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-04-22T09:44:44Z by kres fd5cab0.
+# Generated on 2025-05-06T10:11:16Z by kres 1a0156b.
 
 name: default
 concurrency:
@@ -2998,6 +2998,14 @@ jobs:
         if: github.event_name == 'schedule'
         run: |
           make talosctl-cni-bundle
+      - name: images-essential
+        if: github.event_name == 'schedule'
+        env:
+          IMAGE_REGISTRY: registry.dev.siderolabs.io
+          IMAGER_ARGS: --extra-kernel-arg=console=ttyS0
+          PLATFORM: linux/amd64,linux/arm64
+        run: |
+          make images-essential
       - name: provision-tests-prepare
         run: |
           make provision-tests-prepare
