--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-05-06T10:12:53Z by kres 1a0156b.
+# Generated on 2025-05-06T10:19:56Z by kres 1a0156b.
 
 name: default
 concurrency:
@@ -2390,6 +2390,14 @@ jobs:
           IMAGE_REGISTRY: registry.dev.siderolabs.io
           SHORT_INTEGRATION_TEST: "yes"
           WITH_CONFIG_PATCH: '@hack/test/patches/node-address-v2.yaml'
+        run: |
+          sudo -E make e2e-qemu
+      - name: e2e-tpm1_2
+        env:
+          GITHUB_STEP_NAME: ${{ github.job}}-e2e-tpm1_2
+          IMAGE_REGISTRY: registry.dev.siderolabs.io
+          SHORT_INTEGRATION_TEST: "yes"
+          WITH_TPM1_2: "true"
         run: |
           sudo -E make e2e-qemu
       - name: save artifacts
