--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2025-02-13T13:24:54Z by kres 5e9dc91.
+# Generated on 2025-05-05T11:32:03Z by kres 1a0156b.
 
 name: default
 concurrency:
@@ -464,7 +464,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/contrib
-          ref: main
+          ref: release-1.9
           repository: siderolabs/contrib
       - name: setup tf
         uses: hashicorp/setup-terraform@v3
@@ -615,7 +615,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/contrib
-          ref: main
+          ref: release-1.9
           repository: siderolabs/contrib
       - name: setup tf
         uses: hashicorp/setup-terraform@v3
@@ -769,7 +769,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/contrib
-          ref: main
+          ref: release-1.9
           repository: siderolabs/contrib
       - name: setup tf
         uses: hashicorp/setup-terraform@v3
@@ -901,7 +901,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/contrib
-          ref: main
+          ref: release-1.9
           repository: siderolabs/contrib
       - name: setup tf
         uses: hashicorp/setup-terraform@v3
@@ -1329,7 +1329,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/contrib
-          ref: main
+          ref: release-1.9
           repository: siderolabs/contrib
       - name: setup tf
         uses: hashicorp/setup-terraform@v3
@@ -1582,7 +1582,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/contrib
-          ref: main
+          ref: release-1.9
           repository: siderolabs/contrib
       - name: setup tf
         uses: hashicorp/setup-terraform@v3
