--- a/.github/workflows/integration-aws-nvidia-oss-cron.yaml
+++ b/.github/workflows/integration-aws-nvidia-oss-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-12-17T10:40:00Z by kres 318187b.
+# Generated on 2025-05-05T11:32:03Z by kres 1a0156b.
 
 name: integration-aws-nvidia-oss-cron
 concurrency:
@@ -128,7 +128,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/contrib
-          ref: main
+          ref: release-1.9
           repository: siderolabs/contrib
       - name: setup tf
         uses: hashicorp/setup-terraform@v3
