--- a/.github/workflows/integration-azure-cron.yaml
+++ b/.github/workflows/integration-azure-cron.yaml
@@ -1,6 +1,6 @@
 # THIS FILE WAS AUTOMATICALLY GENERATED, PLEASE DO NOT EDIT.
 #
-# Generated on 2024-09-09T13:58:35Z by kres 8be5fa7.
+# Generated on 2025-05-05T11:32:03Z by kres 1a0156b.
 
 name: integration-azure-cron
 concurrency:
@@ -106,7 +106,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           path: _out/contrib
-          ref: main
+          ref: release-1.9
           repository: siderolabs/contrib
       - name: setup tf
         uses: hashicorp/setup-terraform@v3
