--- a/hack/release.toml
+++ b/hack/release.toml
@@ -18,6 +18,10 @@ preface = """
     [notes.updates]
         title = "Component Updates"
         description = """\
+Linux: 6.12.27
+runc: 1.3.0
+
+Talos is built with Go 1.24.3.
 """
 
 [make_deps]
