feat: update containerd to 2.1.0
Update configuration.

See also https://github.com/siderolabs/talos/issues/10921

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>

--- a/hack/cri-containerd.toml
+++ b/hack/cri-containerd.toml
@@ -3,6 +3,8 @@ version = 3
 disabled_plugins = [
     "io.containerd.internal.v1.tracing",
     "io.containerd.snapshotter.v1.blockfile",
+    "io.containerd.snapshotter.v1.erofs",
+    "io.containerd.ttrpc.v1.otelttrpc",
     "io.containerd.tracing.processor.v1.otlp",
 ]
 
