--- a/hack/release.toml
+++ b/hack/release.toml
@@ -18,9 +18,10 @@ preface = """
     [notes.updates]
         title = "Component Updates"
         description = """\
-Linux: 6.12.27
+Linux: 6.12.28
 Kubernetes: 1.33.1
 runc: 1.3.0
+containerd: 2.1.0
 
 Talos is built with Go 1.24.3.
 """
