feat: update default Kubernetes to v1.33.1
See https://github.com/kubernetes/kubernetes/releases/tag/v1.33.1

Signed-off-by: Andrey Smirnov <andrey.smirnov@siderolabs.com>
(cherry picked from commit 78c33bcdb9a30195ce401311e82b2e189faf33f3)

--- a/hack/release.toml
+++ b/hack/release.toml
@@ -20,6 +20,7 @@ preface = """
         title = "Component Updates"
         description = """
 Linux: 6.12.28
+Kubernetes: 1.33.1
 
 Talos is built with Go 1.24.3.
 """
