--- a/hack/release.toml
+++ b/hack/release.toml
@@ -19,6 +19,7 @@ preface = """
         title = "Component Updates"
         description = """\
 Linux: 6.12.27
+Kubernetes: 1.33.1
 runc: 1.3.0
 
 Talos is built with Go 1.24.3.
